# code_converter

./: CMakeLists.txt  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/code_converter/: MainActivity.kt
assets/files/: output.py
assets/images/: message.txt  output.py
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  main_class.dart
lib/components/: components.dart  constants.dart
lib/cudits/: cudit.dart  states.dart
lib/modules/: c++_layout_screen.dart  python_layout_screen.dart
lib/styles/: colors.dart  thems.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
